bug: vertically align text with button

--- a/corehq/apps/hqwebapp/static/hqwebapp/scss/commcarehq/_select2.scss
+++ b/corehq/apps/hqwebapp/static/hqwebapp/scss/commcarehq/_select2.scss
@@ -112,8 +112,17 @@
 
 .select2-container--default
   .select2-selection--single.select2-selection--clearable {
+  display: flex;
+  align-items: center;
+
+  .select2-selection__rendered {
+    order: 1;
+    flex: 1 1 auto;
+  }
   .select2-selection__clear {
     font-size: 1.5em;
+    line-height: 1;
+    order: 2;
   }
 }
 
